# unai-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  docker-compose.yml  index.py  main.py  nitro.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
.changeset/: fast-geese-cover.md  tiny-kids-lie.md
.github/workflows/: ci-cd.yml  deploy.yml  integrate.yml
app/: main.py
app/routers/: detect.py  health.py  search.py
app/utils/: helpers.py  models.py
middleware/: cors.ts
routes/: detect.post.ts  detect.py  health.py  search.post.ts  search.py
server/: main.py
server/core/: config.py
server/routers/: detect.py  health.py  scan.py  search.py
server/routes/: detect.post.ts  detect.py  health.py  health.ts  omr.py  search.post.ts  search.py
server/routes/image/: __init__.py  detect.py  embedding.py  omr.py  router.py
server/routes/text/: __init__.py  embedding.py  router.py
server/utils/: base64ToArray.py  convertBoxFormat.py  helper.ts  helper_omr.py  helpers_obj.py  imageLoad.py  imageResize.py  imageSave.py  imageScale.py  labelBox.py  models.py  models.ts  nonMaxSuppression.py  omrAlignCrop.py  omrAlignInput.py  omrDetectMarkers.py  omrDetectQR.py  omrExtractData.py  omrHighlights.py  scan.py
utils/: helper.ts  helpers.py  models.py  models.ts
