[project]
name = "unai-api"
version = "0.1.0"
description = "Global REST API AI Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "meilisearch>=0.33.0",
    "pillow>=11.0.0",
    "tensorflow-cpu>=2.18.0",
    "tensorflow>=2.18.0",
    "weaviate-client>=3.26.7,<4.0.0",
    "firebase-admin>=6.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev = "fastapi dev app/main.py"
lint = "ruff check --fix"
format = "ruff format"
