[project]
name = "unai-api"
version = "0.1.0"
description = "Global REST API AI Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "meilisearch>=0.33.0",
    "pillow>=11.0.0",
    "tensorflow-cpu>=2.18.0",
    "weaviate-client>=3.26.7,<4.0.0",
    "firebase-admin>=6.6.0",
    "numpy>=2.0.2",
    "opencv-contrib-python-headless>=4.10.0.84",
    "pydantic-settings>=2.7.0",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "changelog-gen>=0.13.5",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev = "fastapi dev server/main.py"
lint = "ruff check --fix"
format = "ruff format"
docker-build = "docker build --build-arg VERSION_TAG=dev -t unai-api-fastapi:dev ."
docker-start = "docker run --detach --name unai-api-fastapi-dev --env-file .env.prod -p 2300:8000 unai-api-fastapi:dev"
