[project]
name = "unai-api"
version = "0.1.0"
description = "Global REST API AI Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "numpy>=2.0.2",
    "opencv-contrib-python-headless>=4.10.0.84",
    "pillow>=11.0.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "scipy>=1.14.1",
    "nanoid>=2.0.0",
]

[dependency-groups]
dev = [
    "changelog-gen>=0.13.5",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev = "fastapi dev server/main.py"
lint = "ruff check --fix"
format = "ruff format"
preview = "fastapi run server/main.py"
docker-build = "docker build --build-arg VERSION_TAG=dev -t unai-api-fastapi:dev ."
docker-start = "docker run --detach --name unai-api-fastapi-dev --env-file .env.prod -p 2300:8000 unai-api-fastapi:dev"
